data/derived/comb/progs/unify/prog7399.ml.out
Characters 138-148:
  (a1 @ [(x1+x2)/10], a2 @ [(x1+x2) mod 10])
         ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
